# tams-rust

./: .env  .gitignore  Cargo.toml  README.md  api-spec.yaml  config.toml  create_db.sql  fixes.md  setup.sh  start_server.sh  test.html
.sqlx/: query-171e43f0dc2e8e811f97c5e2c948b74ceb2478c13bd372f95fc1bcd7f60d7a5f.json  query-22c0c32c4395f5d794a59b8821c4f9f362cd337a8521bce8cd3d2102ef6ad8c0.json  query-2d247a7f86b94970e001714c8a81b4dc5529e5e114bfa6d0d8bebf6c455f7309.json  query-3a4fc563ae11c31b134720fd660ef3aabcd3f8c13961f472212236b7790ee527.json  query-3cd3f6005ba0cd902fb42211d29c74611bf08a8fe03da21d0ebf2dcb66441164.json  query-3cedd6d6e7464f8e805aaf02d15e0450ef0b49feed879534d25f88e1ea04fac9.json  query-453b96d78b40818e9db54a497ac603475915533f488dcb2b4c44f7bbb6f0f437.json  query-4ba8c5600db0b6bb4a4eae1c31fe8bf0ae1f3c0604bd7de4e4300b09c50efbda.json  query-6773a83213bba062dea73807876bfa1439203d08dbccb9e4f29cfcc434539b0a.json  query-6920cc613536c1819b3722d80ba362bf784730ab7cdc87c23919ae4fc112d5de.json  query-6a8886ca1ac6d758fa648d75ca8395cdb0c532960fac6a7944b9e3db530de10a.json  query-7374875a68d6651a670e4f140ea6e31da175dd7f1ab65780a70989ced45c9e2d.json  query-7c9257f7d51297a20074c64cf90b607def5222c52751c19c1466d5e96afdfc0c.json  query-aaa368937444ea2f1747302cee9abc0aab489857bd584465e791d548e0021d25.json  query-aba6a7fa6fb0d5de46b4d9289b96d585a25d1dc8970d293ffccb8887a18e0165.json  query-af0331d436a7f95a7cc2652570aaca3407e14b1053a157d20afeb58782006055.json  query-b078033951cb98e425345fed171553685e17b0b2581ebed12bcca3138e2d2e11.json  query-b5650a97efe9205fd90f34e3b57ca656d1373d585e1e3de0c8dd24246cd8c92f.json  query-c59b4718cba6059b4b6ad106075a4c024bf45516b0dd32f0ec162bb8dc94c905.json  (+2 more)
src/: auth.rs  config.rs  database.rs  error.rs  (+6 more)
